add html signup email

--- a/app/views/user_mailer/signup.text.erb
+++ b/app/views/user_mailer/signup.text.erb
@@ -1,2 +1,2 @@
 Please confirm your email address.
-<%= "localhost:3000/verify?token=#{CGI.escape(@token)}" %>
+<%= "okrobot.surge.sh/verify?token=#{CGI.escape(@token)}" %>
